scss/partials/_wrt.scss
$chart_radius: 50;
$pi: 3.14159265359;
$circ: #{2 * $pi * $chart_radius};


@for $i from 0 through 100 {
  @keyframes dash-#{$i} {
    to {
      @if $i == 0 {
        stroke-dasharray: 0 $circ;
      } @elseif $i == 100 {
        stroke-dasharray: $circ 0;
      } @else {
        stroke-dasharray: #{314.15926536 * ($i/100)} #{314.15926536 - (314.15926536 * ($i/100))};
      }
    }
  }
  @-webkit-keyframes dash-#{$i} {
    to {
      @if $i == 0 {
        stroke-dasharray: 0 $circ;
      } @elseif $i == 100 {
        stroke-dasharray: $circ 0;
      } @else {
        stroke-dasharray: #{314.15926536 * ($i/100)} #{314.15926536 - (314.15926536 * ($i/100))};
      }
    }
  }
}

div.wrt-count-container {
  position: relative;

  &:hover {
    div.wrt-count.has-read-list {
      opacity: 1;
    }
  }

  div.wrt-count {
    @include OC_Body_Book();
    font-size: 12px;
    color: $deep_navy;
    cursor: pointer;
    padding-left: 16px;
    position: relative;
    opacity: 0.5;

    &:before {
      content: "";
      width: 10px;
      height: 10px;
      position: absolute;
      top: 4px;
      left: 0;
      background-image: cdnUrl("/img/ML/viewers_icon.svg");
      background-repeat: no-repeat;
      background-position: center;
      background-size: 10px 10px;
    }
  }
}

div.wrt-popup-container {
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100vh;
  position: fixed;
  overflow: visible;
  padding: 24px;
  text-transform: none;
  background-color: $carrot_modal_bg;
  z-index: #{$navbar_zindex + 156};
  opacity: 1;
  cursor: auto;

  @include mobile() {
    position: absolute;
    padding: 0;
  }

  button.modal-close-bt {
    position: absolute;
    right: 336px;
    top: 12px;
  }

  div.wrt-popup {
    width: 320px;
    background-color: white;
    position: absolute;
    top: 0;
    height: 100vh;
    right: 0;
    padding: 0 24px 16px;
    transition: right 180ms ease-in;
    overflow-x: hidden;
    overflow-y: scroll;

    @include mobile() {
      position: relative;
      top: unset;
      right: unset;
      width: 100%;
    }

    div.wrt-popup-header {
      width: calc(100% + 48px);
      height: 56px;
      margin-left: -24px;
      background-color: $grey_num_2;
      padding: 12px 16px;

      @include mobile() {
        position: relative;
        border-bottom: 1px solid $ultra_light_grey;
      }

      div.wrt-popup-header-title {
        @include OC_Body_Bold();
        font-size: 14px;
        color: $deep_navy;
        line-height: 32px;
        float: left;

        @include mobile() {
          text-align: center;
          float: unset;
        }
      }

      button.mobile-close-bt {
        display: none;

        @include mobile() {
          display: block;
          position: absolute;
          left: 16px;
          top: 16px;
          width: 24px;
          height: 24px;
          padding: 0;
          background-image: cdnUrl("/img/ML/cmail_fullscreen_close.svg");
          background-size: 12px 12px;
          background-position: center;
          background-repeat: no-repeat;
        } 
      }
    }

    div.small-loading {
      margin: 16px 0;
    }

    div.wrt-popup-inner {
      padding: 24px 0;

      div.wrt-chart-container {
        margin-bottom: 24px;

        div.wrt-chart {
          width: 116px;
          height: 116px;
          margin: 0 auto;

          .wrt-donut-segment {
            stroke-dasharray: 0 $circ;
            stroke-dashoffset: 78.539;

            @for $i from 0 through 100 {
              &.wrt-donut-segment-#{$i} {
                animation: dash-#{$i} 280ms 500ms ease-out forwards;
              }
            }
          }

          .wrt-chart-text {
            @include OC_Body_Bold();
            font-size: 24px;
            fill: $deep_navy;
            -moz-transform: translateY(8px);
            -ms-transform: translateY(8px);
            -webkit-transform: translateY(8px);
            transform: translateY(8px);
          }

          .wrt-chart-number {
            font-size: 24px;
            line-height: 1;
            text-anchor: middle;
          }
        }

        div.wrt-chart-label {
          margin-top: 16px;
          text-align: center;
          @include OC_Body_Book();
          font-size: 14px;
          color: $deep_navy;
          line-height: 18px;

          button.manage-section-bt {
            display: block;
            width: 100%;
            padding: 0;
            margin: 0;
            height: 18px;
            color: $carrot_green;
            @include OC_Body_Book();
            font-size: 14px;
            text-align: center;
          }
        }
      }

      div.wrt-popup-tabs {
        margin-top: 8px;
        width: 100%;
        position: relative;

        div.wrt-popup-tabs-select {
          width: 100%;
          height: 32px;
          background-color: $ultra_light_grey;
          color: $deep_navy;
          padding: 7px 8px;
          border-radius: 4px;
          @include OC_Body_Book();
          font-size: 14px;
          background-image: cdnUrl("/img/ML/select_arrows.svg");
          background-size: 8px 10px;
          background-position: top 11px right 8px;
          background-repeat: no-repeat;
        }

        div.dropdown-list-container {
          width: 100%;
          left: 0;
          top: 24px;

          div.triangle{
            display: none;
          }
        }
      }

      div.wrt-popup-search-container {
        margin-top: 8px;
        width: 100%;
        background-image: cdnUrl("/img/ML/wrt_search_lens.svg");
        background-size: 11px 12px;
        background-position: top 11px left 8px;
        background-repeat: no-repeat;
        padding-left: 19px;
        background-color: $ultra_light_grey;
        border-radius: 4px;

        input.wrt-popup-query {
          width: calc(100% - 19px);
          margin-right: 16px;
          float: right;
          height: 32px;
          border: none;
          outline: none;
          padding: 7px 8px;
          @include OC_Body_Book();
          font-size: 14px;
          background-color: $ultra_light_grey;
          color: $deep_navy;
          outline: none;
          border-radius: 4px;

          @include placeholder(){
            color: rgba($deep_navy, 0.4);
          }
        }
      }

      div.wrt-popup-list {
        margin: 24px 0 0 -24px;
        width: 100%;
        padding: 0;
        width: calc(100% + 48px);

        div.wrt-popup-list-row {
          margin: 0;
          height: 52px;
          padding: 8px 24px;

          @include big_web() {
            &:hover {
              background-color: $another_ui_grey;
            }
          }

          &.seen, &.sent {
            div.wrt-popup-list-row-name, div.wrt-popup-list-row-seen {
              width: calc(100% - 24px - 8px);
            }
          }

          &:not(.seen), &:not(.sent) {
            @include big_web() {
              &:hover {
                button.send-reminder-bt {
                  display: block;
                }
              }
            }
          }

          div.wrt-popup-list-row-avatar {
            float: left;
            position: relative;
            width: 24px;
            height: 24px;
            margin-top: 6px;

            @include user_profile(24);
          }

          $row_right_label_max_width: 110px;

          div.wrt-popup-list-row-name {
            float: left;
            margin-left: 8px;
            @include OC_Body_Book();
            font-size: 14px;
            color: $light_navy;
            line-height: 18px;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
            width: calc(100% - 24px - 8px - 43px - 20px);
          }

          div.wrt-popup-list-row-seen {
            float: left;
            margin-left: 8px;
            @include OC_Body_Book();
            font-size: 12px;
            color: rgba($deep_navy, 0.5);
            line-height: 18px;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
            width: calc(100% - 24px - 8px - 43px - 20px);
          }

          button.send-reminder-bt {
            height: 24px;
            float: right;
            color: $carrot_green;
            @include OC_Body_Book();
            font-size: 12px;
            padding: 0;
            margin-top: -14px;
            display: none;

            @include mobile() {
              display: block;
            }
          }
        }
      }
    }
  }
}

